# mwa_source_finder

./: .gitignore  LICENSE  README.md  pyproject.toml
mwa_source_finder/: beam_1D.py  beam_2D.py  beam_utils.py  cli.py  coord_utils.py  file_output.py  finder.py  logger_setup.py  obs_planning.py  obs_utils.py  plotting.py
src/mwa_source_finder/: __init__.py  beam.py  beam_utils.py  cli.py  constants.py  coord_utils.py  coordinates.py  file_output.py  finder.py  logger.py  logger_setup.py  obs_planning.py  obs_utils.py  observations.py  plotting.py
src/mwa_source_finder/applications/: source_finder_cli.py
src/mwa_source_finder/apps/: source_finder_cli.py
src/mwa_source_finder/utils/: __init__.py  coordinates.py  logger.py  observations.py
