[project]
name = "mwa-source-finder"
version = "0.3.2"
description = "Find sources in MWA observations"
authors = [
    { name = "Christopher Lee" },
    { name = "Nick Swainston" },
    { name = "Bradley Meyers" },
]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">= 3.8"
dependencies = [
    "astropy>=5.2.2",
    "matplotlib>=3.7.5",
    "mwa-hyperbeam>=0.9.4",
    "numpy>=1.24.4",
    "psrqpy>=1.2.10",
    "pyyaml>=6.0.2",
    "ruff>=0.6.4",
    "scipy>=1.10.1",
    "tqdm>=4.66.5",
]

[project.scripts]
source-finder = "mwa_source_finder.applications.source_finder_cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"
include = [
    "pyproject.toml",
    "src/mwa_source_finder/*.py",
    "src/mwa_source_finder/applications/*.py",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
ignore = [
    # Ignore unused imports
    "F401",
    # Ignore wildcard imports
    "F403",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
