[project]
name = "mwa-source-finder"
version = "0.5.0"
description = "Find sources in MWA observations"
authors = [
    { name = "Christopher Lee" },
    { name = "Nick Swainston" },
    { name = "Bradley Meyers" },
]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">= 3.10"
dependencies = [
    "astropy>=6.1",
    "cmasher>=1.6.3",
    "matplotlib>=3.7.5",
    "mwa-hyperbeam>=0.9.3",
    "numpy",
    "psrqpy>=1.3",
    "pyyaml>=6.0.2",
    "scipy>=1.10.1",
    "setuptools>=75.8.0",
    "tqdm>=4.66.5",
]

[dependency-groups]
lint = ["ruff"]

[project.scripts]
source-finder = "mwa_source_finder.apps.source_finder_cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
include = [
    "pyproject.toml",
    "src/mwa_source_finder/*.py",
    "src/mwa_source_finder/apps/*.py",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports due to cmasher
"plotting.py" = ["F401"]
# Ignore line too long
"file_output.py" = ["E501"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces, rather than tabs
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"